Fix comments buttons on mobile @ 360x640

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -239,6 +239,10 @@
         margin-right: auto;
         .button--alt {
           flex-grow: 1;
+          // min-width:30px;
+        }
+        .button-toggle {
+          padding: var(--spacing-xs);
         }
       }
       .comment__sort {
